Fixed the while glitch, off-centered the center to improve fitting with button, lowered max length slightly.

--- a/app/assets/stylesheets/flashcard.css.scss
+++ b/app/assets/stylesheets/flashcard.css.scss
@@ -44,8 +44,9 @@
 
   .flashcard-class {
     font-family: "Comic Sans MS";
+    padding-right: 20px;
     font-size: 16px;
-    width: 398px;
+    width: 378px;
     border: none;
     &:focus {
       outline: 0;
